[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/Map_wo_Separators_Color_Filters_Blank.png" type="Texture" id=1]
[ext_resource path="res://assets/OverworldLocation.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Overworld.gd" type="Script" id=3]
[ext_resource path="res://Empire.tscn" type="PackedScene" id=4]
[ext_resource path="res://OverworldBattleManager.tscn" type="PackedScene" id=5]
[ext_resource path="res://Pre_SRPG_BATTLE_MANAGER.tscn" type="PackedScene" id=6]

[node name="Overworld" type="Node2D"]
script = ExtResource( 3 )

[node name="OverworldBattleManager" parent="." instance=ExtResource( 5 )]

[node name="Pre_SRPG_BATTLE_MANAGER" parent="OverworldBattleManager" instance=ExtResource( 6 )]

[node name="Sprite" type="Sprite" parent="."]
z_index = -20
texture = ExtResource( 1 )
centered = false

[node name="Zetennu" parent="." instance=ExtResource( 2 )]
margin_left = 1439.0
margin_top = 887.0
margin_right = 1439.0
margin_bottom = 887.0
LocationName = "Zetennu"
Owner = 0

[node name="Neru-Khisi" parent="." instance=ExtResource( 2 )]
margin_left = 1533.0
margin_top = 625.0
margin_right = 1533.0
margin_bottom = 625.0
LocationName = "Neru-Khisi"
Owner = 5

[node name="Satayi" parent="." instance=ExtResource( 2 )]
margin_left = 1601.0
margin_top = 380.0
margin_right = 1601.0
margin_bottom = 380.0
LocationName = "Satayi"

[node name="Khel-Et" parent="." instance=ExtResource( 2 )]
margin_left = 1243.0
margin_top = 259.0
margin_right = 1243.0
margin_bottom = 259.0
rect_pivot_offset = Vector2( -56, 52 )
LocationName = "Khel-Et"
Owner = 2

[node name="ForsakenTemple" parent="." instance=ExtResource( 2 )]
margin_left = 877.0
margin_top = 298.0
margin_right = 877.0
margin_bottom = 298.0
LocationName = "ForsakenTemple"
Owner = 2

[node name="Medjed\'sBeacon" parent="." instance=ExtResource( 2 )]
margin_left = 1045.0
margin_top = 625.0
margin_right = 1045.0
margin_bottom = 625.0
LocationName = "Medjed'sBeacon"
Owner = 3

[node name="FortZaka" parent="." instance=ExtResource( 2 )]
margin_left = 861.0
margin_top = 867.0
margin_right = 861.0
margin_bottom = 867.0
LocationName = "FortZaka"
Owner = 2

[node name="Nekhet\'sRest" parent="." instance=ExtResource( 2 )]
margin_left = 277.0
margin_top = 827.0
margin_right = 277.0
margin_bottom = 827.0
LocationName = "Nekhet'sRest"
Owner = 4

[node name="RuinsOfAtesh" parent="." instance=ExtResource( 2 )]
margin_left = 647.0
margin_top = 646.0
margin_right = 647.0
margin_bottom = 646.0
rect_pivot_offset = Vector2( -56, 52 )
LocationName = "RuinsOfAtesh"
Owner = 4

[node name="CursedStronghold" parent="." instance=ExtResource( 2 )]
margin_left = 281.0
margin_top = 209.0
margin_right = 281.0
margin_bottom = 209.0
rect_pivot_offset = Vector2( -56, 52 )
LocationName = "CursedStronghold"
Owner = 1

[node name="Player_Empire" parent="." instance=ExtResource( 4 )]
is_AI_controlled = false

[node name="AI_Empire_1" parent="." instance=ExtResource( 4 )]

[node name="AI_Empire_2" parent="." instance=ExtResource( 4 )]

[node name="AI_Empire_3" parent="." instance=ExtResource( 4 )]

[node name="AI_Empire_4" parent="." instance=ExtResource( 4 )]

[node name="AI_Empire_5" parent="." instance=ExtResource( 4 )]

[node name="BOSS_Empire" parent="." instance=ExtResource( 4 )]
is_AI_controlled = false

[connection signal="battle_outcome" from="OverworldBattleManager/Pre_SRPG_BATTLE_MANAGER" to="OverworldBattleManager" method="_on_Pre_SRPG_BATTLE_MANAGER_battle_outcome"]
[connection signal="Area_Klicked" from="Zetennu" to="OverworldBattleManager" method="_on_Zetennu_Area_Klicked"]
[connection signal="Area_Klicked" from="Neru-Khisi" to="OverworldBattleManager" method="_on_NeruKhisi_Area_Klicked"]
[connection signal="Area_Klicked" from="Satayi" to="OverworldBattleManager" method="_on_Satayi_Area_Klicked"]

[editable path="Zetennu"]
